--- a/css/responsive/desktop.less
+++ b/css/responsive/desktop.less
@@ -27,7 +27,7 @@ nav {
 
     &.affix-top {
         background-color: #FFF;
-        background-image: linear-gradient(#fff, #ECEBEC);
+        background-image: linear-gradient(#fff, #ececec);
         border-color: rgba(236,235,236, 1);
         animation: slideInDown 0.95s  ease-in;
         -webkit-animation: slideInDown 0.95s;
@@ -66,9 +66,9 @@ nav {
 }
 
 #home {
+    position: relative;
     height: 100%;
     width: 100%;
-    background-color: #FFF;
 
     .welcome {
       color: #FFF;
@@ -168,6 +168,9 @@ nav {
 
             .item-icons {
                 display: block;
+                position: absolute;
+                bottom: 5px;
+                right: 5px;
 
                 span {
                     color: #fff;
@@ -186,6 +189,8 @@ nav {
                 }
             }
             .item-details {
+                padding-top: 10px;
+
                 h4 {
                     color: #000;
                     text-transform: uppercase;
@@ -194,6 +199,7 @@ nav {
                 }
 
                 p {
+                    padding-top: 5px;
                     font-size: 13px;
                     color: #000;
                     line-height: 15px;
@@ -324,11 +330,12 @@ nav {
 
         .item-image {
             .logo {
-                -webkit-filter: grayscale(0);
-                filter: grayscale(0);
+                -webkit-filter: grayscale(100%);
+                filter: grayscale(100%);
+                opacity: 0.2;
 
                 &.dark-image {
-                  opacity: 1;
+                  opacity: 0.2;
                 }
             }
         }
