--- a/css/styles.less
+++ b/css/styles.less
@@ -22,35 +22,10 @@ svg {
 }
 
 svg#bigHalfCircle {
-  background-color: rgba(0,0,0,0);
+  background-color: #FFF;
   path {
-    background-color: rgba(0,0,0,0);
-    fill: #FFF;
+    fill: #cccccc;
     stroke: rgba(0,0,0,0);
-  }
-}
-
-svg#bigTriangleColor {
-  background: #cccccc;
-  path {
-    fill: #FFF;
-    stroke: #FFF;
-  }
-}
-
-svg#slit {
-  background: #cccccc;
-  path {
-    background: #cccccc;
-
-  }
-  #slitPath1 {
-    fill: #FFF;
-    stroke: red;
-    stroke-width: 0;
-  }
-  #slitPath2, #slitPath3 {
-    fill: #999999;
   }
 }
 
@@ -125,7 +100,7 @@ svg#slit {
       height: 100%;
       width: 100%;
       min-width: 100%;
-      margin: 0;
+      margin: 20px 0 0 0;
       padding: 0;
 
       .welcome {
