--- a/css/styles.css
+++ b/css/styles.css
@@ -174,34 +174,11 @@ svg:not(:root) {
   overflow: hidden;
 }
 svg#bigHalfCircle {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #FFF;
 }
 svg#bigHalfCircle path {
-  background-color: rgba(0, 0, 0, 0);
-  fill: #FFF;
+  fill: #cccccc;
   stroke: rgba(0, 0, 0, 0);
-}
-svg#bigTriangleColor {
-  background: #cccccc;
-}
-svg#bigTriangleColor path {
-  fill: #FFF;
-  stroke: #FFF;
-}
-svg#slit {
-  background: #cccccc;
-}
-svg#slit path {
-  background: #cccccc;
-}
-svg#slit #slitPath1 {
-  fill: #FFF;
-  stroke: red;
-  stroke-width: 0;
-}
-svg#slit #slitPath2,
-svg#slit #slitPath3 {
-  fill: #999999;
 }
 .centered {
   text-align: center;
@@ -260,7 +237,7 @@ svg#slit #slitPath3 {
   height: 100%;
   width: 100%;
   min-width: 100%;
-  margin: 0;
+  margin: 20px 0 0 0;
   padding: 0;
 }
 .home-page #home .welcome {
@@ -674,7 +651,8 @@ svg#slit #slitPath3 {
   }
   .portfolio-item .item-information .item-description .item-details,
   .portfolio-item .item-information .item-background .item-details {
-    padding-top: 10px;
+    position: relative;
+    top: 10%;
   }
   .portfolio-item .item-information .item-description .item-details h4,
   .portfolio-item .item-information .item-background .item-details h4 {
@@ -816,5 +794,47 @@ svg#slit #slitPath3 {
   }
   .modal-image {
     max-width: 100%;
+  }
+  .fake-nav a {
+    position: relative;
+    display: inline-block;
+    outline: none;
+    color: #000;
+    text-decoration: none;
+    font-weight: 400;
+    text-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
+    font-size: 1.05em;
+  }
+  /* Effect 1: Brackets */
+  .cl-effect-1 a::before,
+  .cl-effect-1 a::after {
+    display: inline-block;
+    opacity: 0;
+    -webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
+    -moz-transition: -moz-transform 0.3s, opacity 0.2s;
+    transition: transform 0.3s, opacity 0.2s;
+  }
+  .cl-effect-1 a::before {
+    margin-right: 10px;
+    content: '[';
+    -webkit-transform: translateX(20px);
+    -moz-transform: translateX(20px);
+    transform: translateX(20px);
+  }
+  .cl-effect-1 a::after {
+    margin-left: 10px;
+    content: ']';
+    -webkit-transform: translateX(-20px);
+    -moz-transform: translateX(-20px);
+    transform: translateX(-20px);
+  }
+  .cl-effect-1 a:hover::before,
+  .cl-effect-1 a:hover::after,
+  .cl-effect-1 a:focus::before,
+  .cl-effect-1 a:focus::after {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+    -moz-transform: translateX(0px);
+    transform: translateX(0px);
   }
 }
