--- a/css/responsive/desktop.less
+++ b/css/responsive/desktop.less
@@ -26,7 +26,7 @@ nav {
     }
 
     &.affix-top {
-        background-color: #FFF;
+        background-color: #ececec;
         background-image: linear-gradient(#fff, #ececec);
         border-color: rgba(236,235,236, 1);
         animation: slideInDown 0.95s  ease-in;
@@ -83,13 +83,13 @@ nav {
             color: #FFF;
 
             &.welcome-hello {
-                font-size: 2em;
+                font-size: 3em;
                 animation: bounceIn 1s;
             }
 
             &.welcome-from {
             margin-top: 15px;
-            font-size: 1.5em;
+            font-size: 2em;
             opacity: 0;
             animation: bounceIn 1s ease-in-out 1.45s forwards;
 
