--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ html {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  font-family: 'Lato', 'PT Sans', Arial, Helvetica, Verdana, sans-serif;
+  font-family: 'Roboto Condensed', 'PT Sans', Arial, Helvetica, Verdana, sans-serif;
 }
 svg {
   display: block;
@@ -382,7 +382,7 @@ svg#bigHalfCircle path {
 }
 @media screen and (max-width:991px) {
   .bs {
-    padding-bottom: 80px;
+    padding-bottom: 60px;
   }
   .ts {
     padding: 60px 0;
@@ -506,7 +506,7 @@ svg#bigHalfCircle path {
     cursor: default;
   }
   nav.affix-top {
-    background-color: #FFF;
+    background-color: #ececec;
     background-image: linear-gradient(#ffffff, #ececec);
     border-color: #ecebec;
     animation: slideInDown 0.95s ease-in;
@@ -557,12 +557,12 @@ svg#bigHalfCircle path {
     color: #FFF;
   }
   #home .welcome h5.welcome-hello {
-    font-size: 2em;
+    font-size: 3em;
     animation: bounceIn 1s;
   }
   #home .welcome h5.welcome-from {
     margin-top: 15px;
-    font-size: 1.5em;
+    font-size: 2em;
     opacity: 0;
     animation: bounceIn 1s ease-in-out 1.45s forwards;
   }
