--- a/css/styles.less
+++ b/css/styles.less
@@ -10,7 +10,7 @@ body, html {
     width: 100%;
     height: 100%;
     min-height: 100%;
-    font-family: 'Lato', 'PT Sans', Arial, Helvetica, Verdana, sans-serif;
+    font-family: 'Roboto Condensed', 'PT Sans', Arial, Helvetica, Verdana, sans-serif;
 }
 
 svg {
