Hover box color contrast

--- a/css/responsive/desktop.less
+++ b/css/responsive/desktop.less
@@ -116,8 +116,8 @@ nav {
 }
 
 .portfolio-item {
-    width: 350px;
-    height: 200px;
+    width: 400px;
+    height: 225px;
     margin: 5px;
     -moz-transition: all ease-in-out 250ms;
     -o-transition: all ease-in-out 250ms;
@@ -125,7 +125,7 @@ nav {
     transition: all ease-in-out 250ms;
 
     .item-image {
-      line-height: 200px;
+      line-height: 225px;
 
       .logo {
           -webkit-filter: grayscale(100%);
@@ -153,7 +153,7 @@ nav {
 
         .item-description, .item-background {
             position: relative;
-            bottom: -200px;
+            bottom: -225px;
             width: 100%;
             height: 100%;
             -moz-box-sizing: border-box;
@@ -191,19 +191,20 @@ nav {
             .item-details {
                 position: relative;
                 top: 10%;
+                padding: 0 10px;
 
                 h4 {
                     color: #000;
                     text-transform: uppercase;
-                    font-size: 24px;
+                    font-size: 30px;
                     margin: 0 0 5px;
                 }
 
                 p {
                     padding-top: 5px;
-                    font-size: 13px;
+                    font-size: 16px;
                     color: #000;
-                    line-height: 15px;
+                    line-height: 18px;
                 }
             }
         }
@@ -326,7 +327,7 @@ nav {
         }
 
         .item-description {
-            bottom: 200px;
+            bottom: 225px;
         }
 
         .item-image {
