--- a/css/styles.less
+++ b/css/styles.less
@@ -29,6 +29,15 @@ svg#bigHalfCircle {
   }
 }
 
+.fade {
+   opacity: 0;
+   -webkit-transition: opacity 0.25s linear;
+      -moz-transition: opacity 0.25s linear;
+       -ms-transition: opacity 0.25s linear;
+        -o-transition: opacity 0.25s linear;
+           transition: opacity 0.25s linear;
+ }
+
 .centered {
     text-align: center;
 }
