Background change for portfolio section

--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ svg#bigHalfCircle {
   background-color: #FFF;
 }
 svg#bigHalfCircle path {
-  fill: #cccccc;
+  fill: #ececec;
   stroke: rgba(0, 0, 0, 0);
 }
 .fade {
@@ -284,7 +284,7 @@ svg#bigHalfCircle path {
   filter: grayscale(50%);
 }
 .home-page #projects {
-  background-color: #cccccc;
+  background-color: #ececec;
   width: 100%;
   height: auto;
 }
