--- a/css/styles.less
+++ b/css/styles.less
@@ -24,7 +24,7 @@ svg {
 svg#bigHalfCircle {
   background-color: #FFF;
   path {
-    fill: #cccccc;
+    fill: #ececec;
     stroke: rgba(0,0,0,0);
   }
 }
@@ -157,7 +157,7 @@ svg#bigHalfCircle {
     }
 
     #projects {
-        background-color: #cccccc;
+        background-color: #ececec;
         //background-image: linear-gradient(#fff, #ececec);
         width: 100%;
         height: auto;
