Remove link icon on hover logos

--- a/css/styles.less
+++ b/css/styles.less
@@ -94,7 +94,7 @@ svg#bigHalfCircle {
       z-index: -100;
       -webkit-transform: translateX(-50%) translateY(-50%);
       transform: translateX(-50%) translateY(-50%);
-      background: url(images/location.jpg) no-repeat;
+      // background: url(images/location.jpg) no-repeat;
       background-size: cover;
       bottom: 0;
         .video-container {
